--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <!-- header Navbar section -->
     <header class="container d-flex flex-row bd-highlight mb-3">
         <nav class="navbar navbar-expand-lg navbar-light bg-light float-md-start">
-            <div class="container-fluid">
+            <div class="container-fluid ms-auto">
               <a class="navbar-brand" href="#">
-                  <img src="Image/logo.png" alt="">
-
-              </a>
+                  <img src="Image/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav  ">
+              <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav ">
+                <ul class="navbar-nav d-flex justify-content-end">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
@@ -42,10 +40,9 @@
     <div class="container">
       <div class="row row-cols-2">
         <div class="col"><h1>BE THE PENGUINS <br> OF WINTER</h1> <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, expedita?</h3>
-
         </div>
         <div class="col">
-          <img src="image/picture.jpg" alt="">
+          <img src="image/profile2.png" class="img-fluid" alt="">
         </div>
       </div>
       <button type="button" class="btn btn-warning">Buy Now</button>
@@ -89,8 +86,7 @@
             <img src="Image/jacket3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Woman Leather Jacket </h5>
-              <p class="card-text">This is a Woman Leather Jacket.Most of the people like Leather jacket.It has discount price</p>
-            </div>
+              <p class="card-text">This is a Woman Leather Jacket.Most of the people like Leather jacket.It has discount price</p></div>
             <div class="card-footer">
               <div class="d-flex">
                 <h3>$234</h3>
@@ -154,15 +150,14 @@
       </div>
     </section>
     <section>
-      <div class="container">
-        <div class="row d-flex">
-      <div class=""col-8">col-8">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
+        <div class="row">
+           <div class="col-5">
+            <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+            <div class="col-md-5">
               <img src="Image/image 12.png" alt="...">
             </div>
-            <div class="col-md-8">
+            <div class="col-md-5">
               <div class="card-body">
                 <h5 class="card-title">Find the Perfect Fit</h5>
                 <p class="card-text">Everybody is different, which is why we
@@ -180,7 +175,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Free Exchanges</h5>
-                <p class="card-text">TOne of the many reasons you can shop
+                <p class="card-text">Tone of the many reasons you can shop
                   with peace of mind.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
@@ -203,13 +198,12 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="row d-flex">
-      <div class="row d-flex col-4">col-4</div>
-        <img src="image/XMLID 1.png" alt="">
+      <div class="row d-flex">
+         <div class="col-md-7">
+            <img src="image/XMLID 1.png" alt="">
       </div>
+    </div>
     </section>
-
     </main>
     <footer class="text-center">responsiveness assignment-2020</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
