--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="col"><h1>BE THE PENGUINS <br> OF WINTER</h1> <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, expedita?</h3>
         </div>
         <div class="col">
-          <img src="image/profile2.png" class="img-fluid" alt="">
+          <img src="Image/profile2.png" class="img-fluid" alt="">
         </div>
       </div>
       <button type="button" class="btn btn-warning">Buy Now</button>
@@ -199,8 +199,8 @@
         </div>
       </div>
       <div class="row d-flex">
-         <div class="col-md-7">
-            <img src="image/XMLID 1.png" alt="">
+       <div class="col-md-7">
+          <img src="Image/XMLID 1.png" alt="">
       </div>
     </div>
     </section>
